Fix charset issues per modernizer for java 11